# SplatReady

./: .gitignore  README.md  __init__.py  pyproject.toml
core/: colmap_processor.py  config.py  frame_extractor.py  gps_embedder.py  metashape_processor.py  realityscan_processor.py  runner.py  srt_parser.py
panels/: pipeline_panel.py
